tests/baselines/reference/parserVariableStatement2.d.errors.txt
==== tests/cases/compiler/parserVariableStatement2.d.ts (1 errors) ====
    var v;
    ~~~
!!! parserVariableStatement2.d.ts(1,1): error TS1046: A 'declare' modifier is required for a top level declaration in a .d.ts file.